# aegis

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
src/aegis/: __init__.py  cli.py
src/aegis/agents/: agent.py  tools.py
src/aegis/assistant/: jarvis.py  tools.py  voice.py  web_tools.py
src/aegis/llm/: base.py  claude_provider.py  factory.py  ollama_provider.py
src/aegis/scraping/: crawler.py  fetcher.py  jobs.py  parser.py  pipeline.py  politeness.py  report.py  scheduler.py
src/aegis/seriesscout/: __init__.py  filters.py  models.py  scout.py  sites.py
src/aegis/storage/: __init__.py  store.py
src/aegis/tracker/: __init__.py  bookmarks.py  chapters.py  engine.py  notify.py
src/aegis/utils/: config.py  logging.py
tests/: conftest.py  test_agent.py  test_assistant_tools.py  test_crawler.py  test_exports_and_web.py  test_fetcher.py  test_jobs.py  test_parser.py  test_report.py  test_seriesscout.py  test_storage.py  test_tracker_and_sites.py  test_tracker_engine.py
