[project]
name = "aegis"
version = "0.1.0"
description = "Agentic Engine for Gathering, Intelligence & Scraping — an agentic AI pipeline for large-scale web scraping plus a local AI assistant."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Madhavadatta Veladi", email = "madhavadattaveladi@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",            # async-capable HTTP client for scraping
    "beautifulsoup4>=4.12",   # HTML parsing
    "lxml>=5.2",              # fast parser backend for bs4
    "pydantic>=2.7",         # typed settings + data models
    "pydantic-settings>=2.3", # load settings from .env
    "rich>=13.7",            # pretty CLI output
    "tenacity>=8.3",         # retry logic for flaky requests
    "python-dotenv>=1.0",    # .env loading
    "openpyxl>=3.1",         # Excel (.xlsx) export
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]          # only needed if you use the Claude backend
voice = ["SpeechRecognition>=3.10", "pyttsx3>=2.90"]  # optional voice for Jarvis
notify = ["plyer>=2.1"]               # optional desktop notifications for the tracker
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
aegis = "aegis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
